tests/__snapshots__/api-toRaiseError-multiline-stderr.snap.txt
Error: Expression raised a matching type error.

  13 | 
  14 |   expect(lines(sample)).type.not.toRaiseError(
  15 |     `Argument of type '{ b: number; }' is not assignable to parameter of type '{ b: string; }'.
     |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  16 | Types of property 'b' are incompatible.
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  17 | Type 'number' is not assignable to type 'string'.`,
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  18 |   );
  19 | });
  20 | 

       at ./__typetests__/toRaiseError-multiline.tst.ts:15:5 ❭ expression raises matching type error

    The raised type error:

    Argument of type '{ b: number; }' is not assignable to parameter of type '{ b: string; }'. ts(2345)

    Types of property 'b' are incompatible.
    Type 'number' is not assignable to type 'string'.

      12 |   );
      13 | 
      14 |   expect(lines(sample)).type.not.toRaiseError(
         |                ~~~~~~
      15 |     `Argument of type '{ b: number; }' is not assignable to parameter of type '{ b: string; }'.
      16 | Types of property 'b' are incompatible.
      17 | Type 'number' is not assignable to type 'string'.`,

           at ./__typetests__/toRaiseError-multiline.tst.ts:14:16

Error: Expression did not raise a matching type error.

  27 | 
  28 |   expect(lines(sample)).type.toRaiseError(
  29 |     `Argument of type '{ a: number; }' is not assignable to parameter of type '{ a: string; }'.
     |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  30 | Types of property 'a' are incompatible.
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  31 | Type 'number' is not assignable to type 'string'.`,
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  32 |   );
  33 | });
  34 | 

       at ./__typetests__/toRaiseError-multiline.tst.ts:29:5 ❭ expression raises not matching type error

    The raised type error:

    Argument of type '{ b: number; }' is not assignable to parameter of type '{ b: string; }'. ts(2345)

    Types of property 'b' are incompatible.
    Type 'number' is not assignable to type 'string'.

      26 |   );
      27 | 
      28 |   expect(lines(sample)).type.toRaiseError(
         |                ~~~~~~
      29 |     `Argument of type '{ a: number; }' is not assignable to parameter of type '{ a: string; }'.
      30 | Types of property 'a' are incompatible.
      31 | Type 'number' is not assignable to type 'string'.`,

           at ./__typetests__/toRaiseError-multiline.tst.ts:28:16

